# POUS

./: .gitignore  README.md  Snakefile  animated_outage_maps.ipynb  cluster.py  env.yml  environment.yaml  event_distributions.ipynb  plot_county_outage_timeseries.ipynb  plot_county_outage_timeseries_grouped.ipynb  plot_outage.ipynb  plot_outages.ipynb  plot_state_outage_timeseries.ipynb  pyproject.toml
data/raw/counties/: README.md
data/raw/outage/: README.md
notebooks/: animated_outage_maps.ipynb  cluster_and_plot_county_outage_timeseries.ipynb  cluster_and_plot_county_outage_timeseries_sub_daily.ipynb  county_outage_maps.ipynb  plot_county_outage_timeseries.ipynb  plot_county_outage_timeseries_grouped.ipynb  plot_county_propensity_map.ipynb
src/pous/: admin.py  cluster.py  io.py  lib.py  plot.py  preprocess.py
src/pous.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
