[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pous"
version = "0.0.1"
authors = [
  {name="Fred Thomas", email="fred.thomas@eci.ox.ac.uk"}
]
description = "Helper package for POUS analysis workflow"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thomas-fred/POUS"
"Bug Tracker" = "https://github.com/thomas-fred/POUS/issues"
